--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-	"name": "mern-crash-course",
+	"name": "SP-Shop",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
 	"scripts": {
-		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-		"start": "cross-env NODE_ENV=production node backend/server.js",
-		"dev": "cross-env NODE_ENV=development nodemon backend/server.js"
+	  "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
+	  "start": "cross-env NODE_ENV=production node backend/server.js",
+	  "dev": "cross-env NODE_ENV=development nodemon backend/server.js"
 	},
 	"type": "module",
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"dotenv": "^16.4.5",
-		"express": "^4.19.2",
-		"mongoose": "^8.5.1"
+	  "dotenv": "^16.4.5",
+	  "express": "^4.19.2",
+	  "mongoose": "^8.5.1"
 	},
 	"devDependencies": {
-		"cross-env": "^7.0.3",
-		"nodemon": "^3.1.9"
+	  "cross-env": "^7.0.3",
+	  "nodemon": "^3.1.9"
+	},
+	"engines": {
+	  "node": "16.x"
 	}
-}
+  }
+  
